To show what i'm doing

--- a/ReviewYourMovie/Server/appsettings.json
+++ b/ReviewYourMovie/Server/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=LAPTOP-ODHDV0AR;database=UsersDb;trusted_connection=true"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
