App after changes for Deploy

--- a/ReviewYourMovie/Server/appsettings.json
+++ b/ReviewYourMovie/Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=LAPTOP-ODHDV0AR;database=UsersDb;trusted_connection=true"
+    "DefaultConnection":"Server=LAPTOP-ODHDV0AR;database=UsersDb;User ID=admin;Password=zaq1@WSXcde3;"
   },
 
   "Logging": {
